modresort-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: modresort-service
  labels:
    app: modresort-app
spec:
  # type: ClusterIP
  type: NordPort
  ports:
    - port: 9080
  selector:
    app: modresort-app
    tier: frontend
