modresort-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: modresort-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: modresort-app
spec:
  rules:
    # - host: modresort.10.0.0.2.nip.io
    - host: 
      http:
        paths:
          - path: /
            backend:
              serviceName: modresort-service
              servicePort: 9080
